syntax = "proto3";
option csharp_namespace = "Toyar.App.V1";

package Toyar.App.v1;

service GetConfig {
  rpc GetAppliactionConfig (ApplicationConfigRequest) returns (ApplicationConfigResponse){
    }
}

//获取配置项的参数
message ApplicationConfigRequest {
  string appId = 1;//应用标识
  string environmentName = 2;//应用环境
}
message Result{
  string key = 1;//配置唯一标识
  string value = 2;//配置value
  string type=3;//配置项类型
}
//配置项返回类型
message ApplicationConfigResponse {
    repeated  Result result =1;
}

